--- a/index.html
+++ b/index.html
@@ -215,7 +215,37 @@
   </div>
 </div>
 
-    <span class="about" data-toggle="modal" data-target="#aboutmodal">LGR Wallet About</span>
+<footer class="footer footer-white">
+            		<div class="container">
+            			<a class="footer-brand" data-toggle="modal" data-target="#aboutmodal" href="javascript:;"><strong>LGR Wallet About</strong></a>
+
+            			<ul class="pull-center">
+            				<li>Last Block: <strong><span id="EthBlock"></span></strong></li>
+            			</ul>
+
+            			<ul class="social-buttons pull-right">
+            				<li>
+            					<a href="javascript:;" onclick="shell.openExternal('https://twitter.com/getlogarithm');" class="btn btn-icon btn-neutral btn-twitter">
+            						<img src="images/twitter.png" class="img-responsive">
+            					</a>
+            				</li>
+            				<li>
+            					<a href="javascript:;" onclick="shell.openExternal('https://facebook.com/getlogarithm');" class="btn btn-icon btn-neutral btn-dribbble">
+            						<img src="images/facebook.png" class="img-responsive">
+            					</a>
+            				</li>
+            				<li>
+            					<a href="javascript:;" onclick="shell.openExternal('https://github.com/logarithm-network');" class="btn btn-icon btn-neutral btn-google">
+            						<img src="images/github.png" class="img-responsive">
+            					</a>
+            				</li>
+            			</ul>
+
+            		</div>
+            	</footer>
+
+
+
 
 </body>
 
